--- a/app.css
+++ b/app.css
@@ -117,7 +117,6 @@ main {
 #search-input {
   background: var(--primary-color);
   color: var(--primary-text);
-  text-shadow: var(--secondary-color, 100%);
   font-family: "Luckiest Guy", system-ui, sans-serif;
   letter-spacing: 2px;
   font-size: 1.25rem;
@@ -353,7 +352,7 @@ dialog#game-dialog::backdrop {
 }
 #dialog-content {
   padding: 2rem;
-  display: column; /* lavet om til column i stedet for grid */
+  display: grid; 
   grid-template-columns: minmax(250px, 1fr) 2fr;
   gap: 2rem;
   align-items: start;
